src/objects/NDTRS_Form_2016__c.object
<CustomObject>
    <fields>
        <fullName>Previous_addiction_treatment_centre_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous addiction treatment centre 1</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>NDTRS_Forms3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_addiction_treatment_centre_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous addiction treatment centre 2</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>NDTRS_Forms4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_addiction_treatment_centre_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous addiction treatment centre 3</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>NDTRS_Forms5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Problem_with_other_addictive_behaviours__c</fullName>
        <inlineHelpText>Do you have a problem with any other addictive behaviours, such as gambling, self-harming etc.?</inlineHelpText>
        <label>Problem with other addictive behaviours</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Psychiatric__c</fullName>
        <formula>IF(ISBLANK(  X32b12_Date_started__c  ),&quot;False&quot;,&quot;True&quot;)</formula>
        <label>Psychiatric</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QUARTERCP__c</fullName>
        <formula>CASE(TEXT( MONTH(X12_Date_of_Referral__c)), 

&quot;1&quot;, &quot;1&quot;,
&quot;2&quot;, &quot;1&quot;,
&quot;3&quot;, &quot;1&quot;,

&quot;4&quot;, &quot;2&quot;,
&quot;5&quot;, &quot;2&quot;,
&quot;6&quot;, &quot;2&quot;,

&quot;7&quot;, &quot;3&quot;,
&quot;8&quot;, &quot;3&quot;,
&quot;9&quot;, &quot;3&quot;,

&quot;10&quot;, &quot;4&quot;,
&quot;11&quot;, &quot;4&quot;,
&quot;12&quot;, &quot;4&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QUARTERCP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QUARTER__c</fullName>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QUARTER</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecYear__c</fullName>
        <formula>YEAR( X15_Date_of_initial_assessment__c )</formula>
        <label>RecYear</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Receiving_treatment_for_physical_health__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Are you receiving any treatment for a physical health condition?</inlineHelpText>
        <label>Receiving treatment for physical health</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAOR__c</fullName>
        <formula>IF( ISBLANK( X32b27_Date_started__c ) , &quot;False&quot;,&quot;True&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAOR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHARED__c</fullName>
        <formula>CASE( X30d_Ever_shared_needle_and_syringes__c ,
&quot;1. Yes&quot;,&quot;1&quot;,
&quot;2. No&quot;,&quot;2&quot;,
&quot;88. Not applicable&quot;,&quot;88&quot;,
&quot;99. Not known&quot;,&quot;99&quot;,
&quot;&quot;)</formula>
        <label>SHARED</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPECIFYX__c</fullName>
        <formula>&quot;X13_2_Drug_specify__r.Item_Code__c&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SPECIFYX</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUBDRUGSPECIFY__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SUBDRUGSPECIFY</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScreenBy__c</fullName>
        <formula>Case(X42b_If_screening_ordered_by__c, 
&quot;1. Treatment Provider&quot;,&quot;1&quot;, 
&quot;2. Court&quot;, &quot;2&quot;,
&quot;&quot;)</formula>
        <label>ScreenBy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Screen__c</fullName>
        <formula>Case( X42a_Urine_screeding_during_treatment__c , 
&quot;1. Yes&quot;,&quot;1&quot;, 
&quot;2. No&quot;,&quot;2&quot;, 
&quot;&quot;)</formula>
        <label>Screen</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_linked_in_with_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service linked in with 1</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>NDTRS_Forms_Service1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_linked_in_with_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service linked in with 2</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>NDTRS_Forms_Service2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_linked_in_with_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service linked in with 3</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>NDTRS_Forms_Service3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shared_Needle__c</fullName>
        <formula>CASE( X30d_Ever_shared_needle_and_syringes__c ,
&quot;2. Never shared&quot;,&quot;2&quot;,
&quot;1. Shared in the last 30 days&quot;,&quot;1&quot;,
&quot;3. Shared in the last 12 months but not in the last 30 days&quot;,&quot;3&quot;,
&quot;4. Shared but not in the last 12 months&quot;,&quot;4&quot;,
&quot;5. Client did not wish to answer&quot;,&quot;5&quot;,
&quot;99. Not known&quot;,&quot;99&quot;,
&quot;88. Not applicable&quot;,&quot;88&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shared_Needle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shared_Other__c</fullName>
        <formula>CASE( X30e_Ever_shared_other_drug_paraphernali__c,
&quot;2. Never shared&quot;,&quot;2&quot;,
&quot;1. Shared in the last 30 days&quot;,&quot;1&quot;,
&quot;3. Shared in the last 12 months but not in the last 30 days&quot;,&quot;3&quot;,
&quot;4. Shared but not in the last 12 months&quot;,&quot;4&quot;,
&quot;5. Client did not wish to answer&quot;,&quot;5&quot;,
&quot;99. Not known&quot;,&quot;99&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shared_Other</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Occ__c</fullName>
        <formula>IF(ISBLANK(  X32b8_Date_started__c  ),&quot;False&quot;,&quot;True&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>32a - Social and/or Occupational Reintegration</inlineHelpText>
        <label>Social_Occ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_of_Referral__c</fullName>
        <formula>Case(X14_Source_of_referral__c, 
&quot;1. Self&quot;,&quot;1&quot;, 
&quot;2. Family&quot;,&quot;2&quot;, 
&quot;3. Friends&quot;,&quot;3&quot;, 
&quot;4. Other drug treatment centre&quot;,&quot;4&quot;, 
&quot;5. General practitioner&quot;,&quot;5&quot;, 
&quot;6. Acute hospital service excluding emergency dept.&quot;,&quot;6&quot;, 
&quot;7. Social services/Community services&quot;,&quot;7&quot;, 
&quot;8. Court/probation/police&quot;,&quot;8&quot;, 
&quot;10. Outreach worker&quot;,&quot;10&quot;,
&quot;12. School or college&quot;,&quot;12&quot;, 
&quot;13. Prison&quot;,&quot;13&quot;, 
&quot;14. Employer&quot;,&quot;14&quot;, 
&quot;16. Emergency Department (ED)&quot;,&quot;16&quot;, 
&quot;17. Mental health professional&quot;,&quot;17&quot;, 
&quot;18. Needle Exchange&quot;,&quot;18&quot;,
&quot;99. Not known&quot;,&quot;99&quot;,
&quot;&quot;)</formula>
        <label>Source of Referral</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_for_HRB_Report__c</fullName>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status for HRB Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strength_Family__c</fullName>
        <formula>IF( ISBLANK( X32b11_Date_started__c ) ,&quot;False&quot;,&quot;True&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>32a - Strengthening Family Programme</inlineHelpText>
        <label>Strength_Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Substance_use_Valid__c</fullName>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Substance use Valid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suitable_For_Tx_Specify__c</fullName>
        <formula>X17_9_Ohter_specify__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suitable_For_Tx_Specify</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Referral_Assessment_details__c</fullName>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Referral/Assessment details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tick_to_confirm_2019_client_entry__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This form is ONLY FOR CLIENTS WHO ENTERED IN 2019. If client entered in 2018, use OLD HRB Form.</inlineHelpText>
        <label>Tick to confirm 2019 client entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Times__c</fullName>
        <formula>IF(TEXT(X13_Main_Reason_for_referral__c)= &quot;4. Other problem (specify)&quot;, &quot;88&quot;, 
if (X18_Number_times_started_this_year__c = 0, &quot;&quot;, TEXT(X18_Number_times_started_this_year__c) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Times</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Titre__c</fullName>
        <formula>IF (TEXT( X40_Vaccination__c) = &quot;6. Adequate titre protective&quot;, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <label>Titre</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Treatment_Type_Number__c</fullName>
        <formula>IF( AND(  X15_Date_of_initial_assessment__c   &gt;=   DATE(12,01,01), ISBLANK( X35_Date_of_Final_Discharge_or_transfer__c ) ),&quot;0&quot;, &quot;1&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Type 0 = Open Treatment
Type 1 = Completed Treatment</inlineHelpText>
        <label>Treatment Type Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqID__c</fullName>
        <formula>Centre_number__c  &amp; id__c &amp;   RIGHT(TEXT(YEAR( X12_Date_of_Referral__c )), 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UniqID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpdatedBy__c</fullName>
        <formula>Centre_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UpdatedBy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated_Date__c</fullName>
        <formula>DATEVALUE( LastModifiedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Updated__c</fullName>
        <formula>DATEVALUE(

TEXT(  Updated_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vaccine1__c</fullName>
        <formula>IF(TEXT( X40_Vaccination__c ) = &quot;1. First dose&quot;, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vaccine1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vaccine2__c</fullName>
        <formula>IF(TEXT( X40_Vaccination__c ) = &quot;2. Second dose&quot;, &quot;TRUE&quot;,&quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vaccine2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vaccine3__c</fullName>
        <formula>IF(TEXT( X40_Vaccination__c ) = &quot;3. Third dose&quot;, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vaccine3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VaccineB4__c</fullName>
        <formula>IF(TEXT( X40_Vaccination__c ) = &quot;4. Booster dose 1&quot;, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VaccineB4</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VaccineB5__c</fullName>
        <formula>IF(TEXT( X40_Vaccination__c ) = &quot;5. Booster dose 2&quot;, &quot;TRUE&quot;,&quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VaccineB5</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_is_your_medical_card_expiry_date__c</fullName>
        <label>What is your medical card expiry date?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Who_is_your_GP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Who is your GP</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>NDTRS_Forms_GP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X12_Date_of_Referral__c</fullName>
        <label>12 Date of Referral</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X13_2_Drug_specify__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>13.2 Drug (specify)</label>
        <referenceTo>NDTRS_Drugs__c</referenceTo>
        <relationshipName>NDTRS_2016_Forms6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X13_4_Other_problem_speciify__c</fullName>
        <label>13.4 Other problem (speciify)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X13_Main_Reason_for_referral__c</fullName>
        <description>Based on main problem drug
1. Alcohol.     2. Drug (specify)
3. Concerned person.  4. Other problem (specify)</description>
        <inlineHelpText>Based on main problem drug
1. Alcohol.     2. Drug (specify)
3. Concerned person.  4. Other problem (specify)</inlineHelpText>
        <label>13 Main Reason for referral</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Alcohol</fullName>
                </value>
                <value>
                    <fullName>2. Drug (specify)</fullName>
                </value>
                <value>
                    <fullName>3. Concerned person</fullName>
                </value>
                <value>
                    <fullName>4. Other problem (specify)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X14_Source_of_referral__c</fullName>
        <label>14 Source of referral</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Self</fullName>
                </value>
                <value>
                    <fullName>2. Family</fullName>
                </value>
                <value>
                    <fullName>3. Friends</fullName>
                </value>
                <value>
                    <fullName>4. Other drug treatment centre</fullName>
                </value>
                <value>
                    <fullName>5. General practitioner</fullName>
                </value>
                <value>
                    <fullName>6. Acute hospital service excluding emergency dept.</fullName>
                </value>
                <value>
                    <fullName>7. Social services/Community services</fullName>
                </value>
                <value>
                    <fullName>8. Court/probation/police</fullName>
                </value>
                <value>
                    <fullName>10. Outreach worker</fullName>
                </value>
                <value>
                    <fullName>12. School or college</fullName>
                </value>
                <value>
                    <fullName>13. Prison</fullName>
                </value>
                <value>
                    <fullName>14. Employer</fullName>
                </value>
                <value>
                    <fullName>16. Emergency Department (ED)</fullName>
                </value>
                <value>
                    <fullName>17. Mental health professional</fullName>
                </value>
                <value>
                    <fullName>18. Needle Exchange</fullName>
                </value>
                <value>
                    <fullName>99. Not known</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X15_Date_of_initial_assessment__c</fullName>
        <label>15 Date of initial assessment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X16_Assessment_outcome__c</fullName>
        <inlineHelpText>If 2, 3, 4 STOP and return form to HRB</inlineHelpText>
        <label>16 Assessment outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Suitable for treatment in any drug/alcohol service</fullName>
                </value>
                <value>
                    <fullName>2. Unsuitable for drug or alcohol treatment</fullName>
                </value>
                <value>
                    <fullName>3. Referred to another site, no intervention provided in this centre</fullName>
                </value>
                <value>
                    <fullName>4. Psychiatric assessment only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X17_9_Ohter_specify__c</fullName>
        <label>17.9 Other specify</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X17_Where_client_is_suitable_for_treatme__c</fullName>
        <inlineHelpText>If 1 continue form, otherwise STOP and return form to HRB</inlineHelpText>
        <label>17 Where client is suitable for treatmen</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Treatment offered with this centre and client accepted</fullName>
                </value>
                <value>
                    <fullName>3. Client did not fulfil criteria to commence treatment</fullName>
                </value>
                <value>
                    <fullName>4. Client commenced treatment with another centre</fullName>
                </value>
                <value>
                    <fullName>5. Service unable to contact/locate client</fullName>
                </value>
                <value>
                    <fullName>7. Client sent to prison</fullName>
                </value>
                <value>
                    <fullName>8. Client died</fullName>
                </value>
                <value>
                    <fullName>9. Other (specify)</fullName>
                </value>
                <value>
                    <fullName>10. Treatment offered with this centre and client DID NOT accept</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X18_Number_times_started_this_year__c</fullName>
        <description>Number of times started treatment in this centre this year. (Jan-Dec)
(Enter 1, if first time this year)</description>
        <inlineHelpText>Number of times started treatment in this centre this year. (Jan-Dec)
(Enter 1, if first time this year)</inlineHelpText>
        <label>18 Number times started this year</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X19_History_of_treatment_Alcohol__c</fullName>
        <label>19 History of treatment - Alcohol</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>X13_Main_Reason_for_referral__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1. Never treated</fullName>
                </value>
                <value>
                    <fullName>2. Previously treated</fullName>
                </value>
                <value>
                    <fullName>9. Treatment status unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X19_History_of_treatment_Drugs__c</fullName>
        <label>19 History of treatment - Drugs</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>X13_Main_Reason_for_referral__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1. Never treated</fullName>
                </value>
                <value>
                    <fullName>2. Previously treated</fullName>
                </value>
                <value>
                    <fullName>9. Treatment status unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X19_History_of_treatment_Other__c</fullName>
        <label>19 History of treatment - Other</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>X13_Main_Reason_for_referral__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1. Never treated</fullName>
                </value>
                <value>
                    <fullName>2. Previously treated</fullName>
                </value>
                <value>
                    <fullName>9. Treatment status unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X19b_Age_first_treated_Drugs__c</fullName>
        <inlineHelpText>99 if unknown</inlineHelpText>
        <label>19b Age first treated - Drugs</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X19b_Age_first_treated_Other__c</fullName>
        <label>19b Age first treated - Other</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X19d_Age_first_treated_Alcohol__c</fullName>
        <inlineHelpText>99 if unknown</inlineHelpText>
        <label>19d Age first treated - Alcohol</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X20a_Ever_received_any_opiate_substituti__c</fullName>
        <defaultValue>&quot;2. Never received&quot;</defaultValue>
        <description>Ever received any opiate substitution before
1. Previously received  2. Never received  99. Not known</description>
        <inlineHelpText>Ever received any opiate substitution before
1. Previously received  2. Never received  99. Not known
(excluding this current treatment)</inlineHelpText>
        <label>20a Ever received any opiate substitutio</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Previously received</fullName>
                </value>
                <value>
                    <fullName>2. Never received</fullName>
                </value>
                <value>
                    <fullName>99. Not known</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X20b_Age_first_received_any_opiate_subst__c</fullName>
        <defaultValue>88</defaultValue>
        <description>Age first received any opiate substitution (excluding this current treatment)
99 if unknown
88 Not Applicable if 20a=2</description>
        <inlineHelpText>Age first received any opiate substitution (excluding this current treatment)
99 if unknown
88 Not Applicable if 20a=2</inlineHelpText>
        <label>20b Age first received any opiate subst</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X21a_Date_This_treatment_started__c</fullName>
        <label>21a Date This treatment started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X21a_Main_drug__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>21a Main drug</label>
        <referenceTo>NDTRS_Drugs__c</referenceTo>
        <relationshipName>NDTRS_2016_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X21b_Date_substitution_started__c</fullName>
        <description>If receiving an opiate substitute
(methadone/suboxone) date THIS substitution started</description>
        <inlineHelpText>If receiving an opiate substitute
(methadone/suboxone) date THIS substitution started</inlineHelpText>
        <label>21b Date substitution started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X21b_Route_of_Admin_Main_drug__c</fullName>
        <label>21b Route of Admin - Main drug</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Inject</fullName>
                </value>
                <value>
                    <fullName>2. Smoke</fullName>
                </value>
                <value>
                    <fullName>3. Eat/drink</fullName>
                </value>
                <value>
                    <fullName>4. Sniff/snort</fullName>
                </value>
                <value>
                    <fullName>6. Rectal</fullName>
                </value>
                <value>
                    <fullName>7. Topical</fullName>
                </value>
                <value>
                    <fullName>9. Not Known</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X21c_Frequency_of_use_in_last_mth__c</fullName>
        <inlineHelpText>In last month</inlineHelpText>
        <label>21c Frequency of use in last mth</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3. Daily</fullName>
                </value>
                <value>
                    <fullName>6. 4-6 days per week</fullName>
                </value>
                <value>
                    <fullName>7. 2-3 days per week</fullName>
                </value>
                <value>
                    <fullName>1. Once a week or less</fullName>
                </value>
                <value>
                    <fullName>4. No use in past month</fullName>
                </value>
                <value>
                    <fullName>9. Not known</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X21d_Age_at_1st_use__c</fullName>
        <inlineHelpText>If unknown enter 99</inlineHelpText>
        <label>21d Age at 1st use</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X22_Ever_previously_treated_re_drug__c</fullName>
        <description>1. Never treated  2. Previously treated.  8. Not applicable  9. Not known</description>
        <inlineHelpText>1. Never treated  2. Previously treated.  8. Not applicable  9. Not known</inlineHelpText>
        <label>22 Ever previously treated re drug</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Never treated</fullName>
                </value>
                <value>
                    <fullName>2. Previously treated</fullName>
                </value>
                <value>
                    <fullName>8. Not applicable</fullName>
                </value>
                <value>
                    <fullName>9. Not known</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X22a_Drug_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>22a Drug 2</label>
        <referenceTo>NDTRS_Drugs__c</referenceTo>
        <relationshipName>NDTRS_2016_Forms1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X22b_Route_of_Admin_Drug2__c</fullName>
        <label>22b Route of Admin - Drug2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Inject</fullName>
                </value>
                <value>
                    <fullName>2. Smoke</fullName>
                </value>
                <value>
                    <fullName>3. Eat/drink</fullName>
                </value>
                <value>
                    <fullName>4. Sniff/snort</fullName>
                </value>
                <value>
                    <fullName>6. Rectal</fullName>
                </value>
                <value>
                    <fullName>7. Topical</fullName>
                </value>
                <value>
                    <fullName>9. Not Known</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X22c_Frequency_of_use_in_last_mth__c</fullName>
        <inlineHelpText>In last month</inlineHelpText>
        <label>22c Frequency of use in last mth</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3. Daily</fullName>
                </value>
                <value>
                    <fullName>6. 4-6 days per week</fullName>
                </value>
                <value>
                    <fullName>7. 2-3 days per week</fullName>
                </value>
                <value>
                    <fullName>1. Once a week or less</fullName>
                </value>
                <value>
                    <fullName>4. No use in past month</fullName>
                </value>
                <value>
                    <fullName>9. Not known</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X22d_Age_of_1st_use__c</fullName>
        <inlineHelpText>Enter 99 if not known</inlineHelpText>
        <label>22d Age of 1st use</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X23_Type_of_contact_with_this_centre__c</fullName>
        <label>23 Type of contact with this centre</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. First treatment</fullName>
                </value>
                <value>
                    <fullName>2. One or more treatment periods</fullName>
                </value>
                <value>
                    <fullName>9. Not known</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X23a_Drug_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>23a Drug 3</label>
        <referenceTo>NDTRS_Drugs__c</referenceTo>
        <relationshipName>NDTRS_2016_Forms2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X23b_Route_of_Admin_Drug3__c</fullName>
        <label>23b Route of Admin - Drug3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Inject</fullName>
                </value>
                <value>
                    <fullName>2. Smoke</fullName>
                </value>
                <value>
                    <fullName>3. Eat/drink</fullName>
                </value>
                <value>
                    <fullName>4. Sniff/snort</fullName>
                </value>
                <value>
                    <fullName>5. Sublingual</fullName>
                </value>
                <value>
                    <fullName>6. Rectal</fullName>
                </value>
                <value>
                    <fullName>7. Topical</fullName>
                </value>
                <value>
                    <fullName>9. Not Known</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>